--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2017.11.5
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==4.4.2
 Django==2.0
 django-filter==1.1.0
 djangorestframework==3.7.3
@@ -10,7 +11,10 @@ itypes==1.1.0
 Jinja2==2.10
 Markdown==2.6.10
 MarkupSafe==1.0
+mock==2.0.0
+pbr==3.1.1
 pytz==2017.3
 requests==2.18.4
+six==1.11.0
 uritemplate==3.0.0
 urllib3==1.22
